Change Background Form

--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -15,7 +15,7 @@ a{color:rgb(241, 255, 245);text-decoration:none}
 	max-width:525px;
 	min-height:670px;
 	position:relative;
-	background:url(https://d3ciwvs59ifrt8.cloudfront.net/da0c104d-04ec-4550-9eda-e0d90a671242/55bc4bd0-eb5b-4dc7-a8f3-8830a05b64ce_l.jpg) no-repeat center;
+	background:url(https://ipboss.guru/wp-content/uploads/2017/12/etap.jpg) no-repeat center;
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 }
 .login-html{
