--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,7 +1,7 @@
 body{
 	margin:0;
 	color:#ffffff;
-	background:#c8c8c8;
+	background:#fff;
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
 *,:after,:before{box-sizing:border-box}
@@ -147,4 +147,40 @@ a{color:rgb(241, 255, 245);text-decoration:none}
 }
 .foot-lnk{
 	text-align:center;
+}
+
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+.container header {
+  width: 100%;
+  height: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.container header h3 {
+  margin-left: 45px;
+  font-weight: 700;
+}
+.container header nav {
+  margin-right: 45px;
+}
+.container header nav a {
+  text-decoration: none;
+  margin-left: 30px;
+  color: black;
+  font-weight: 500;
+  font-size: 14px;
+}
+.container header nav a:hover {
+  color: #0a7791;
 }
